[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/BossHealth.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Base.gd" type="Script" id=4]
[ext_resource path="res://Hurtboxes + Hitboxes/HurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 32 )

[node name="Base" type="StaticBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BossHealth" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -35.0
margin_top = -46.0
margin_right = -35.0
margin_bottom = -46.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
